# auxy

./: Dockerfile  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
auxy/: __init__.py  server.py
tests/: test_auxy.py
