[tool.poetry]
name = "auxy"
version = "0.1.0"
description = ""
authors = ["nick <huggablesquare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
streamlink = "^5.2.1"
gunicorn = "^20.1.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
